--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Ponder v2 
 
-Created with Node, React, Mongoose, and MongoDB
+v1 of Ponder was created using Reflex a framework for building web apps in python. 
+v2 is the same thing but using Node, React, Mongoose, and MongoDB
 
-Currently this project is inside of the customer folder inside of my local folder called "ponder v2.0.0" it's really confusing I know but it's too annoying to change at the moment
+Currently this project is inside of the customer 
